WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94607
WKTR doesn't implement dumpWillCacheResponse()
https://bugs.webkit.org/show_bug.cgi?id=94607
Summary
WKTR doesn't implement dumpWillCacheResponse()
Brady Eidson
Reported
2012-08-21 09:36:34 PDT
WKTR doesn't implement dumpWillCacheResponse() Need to skip http/tests/misc/willCacheResponse-delegate-callback.html on WK2 as a result.
Attachments
Patch
(9.78 KB, patch)
2012-09-05 03:40 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-08-21 09:40:00 PDT
Skipped in
http://trac.webkit.org/changeset/126163
Unskip when resolving this.
Chris Dumez
Comment 2
2012-09-05 03:40:23 PDT
Created
attachment 162209
[details]
Patch
WebKit Review Bot
Comment 3
2012-09-05 04:43:41 PDT
Comment on
attachment 162209
[details]
Patch Clearing flags on attachment: 162209 Committed
r127578
: <
http://trac.webkit.org/changeset/127578
>
WebKit Review Bot
Comment 4
2012-09-05 04:43:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug