WKTR doesn't implement dumpWillCacheResponse() https://bugs.webkit.org/show_bug.cgi?id=94607

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-05
Reviewed by Kenneth Rohde Christiansen.

Tools:

Define shouldCacheResponse() callback in resource
load client and provide implementation for
dumpWillCacheResponse() in WebKitTestRunner.

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::InjectedBundlePage):
(WTR::InjectedBundlePage::shouldCacheResponse):
(WTR):
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.h:
(InjectedBundlePage):
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::TestRunner):
* WebKitTestRunner/InjectedBundle/TestRunner.h:
(WTR::TestRunner::dumpWillCacheResponse):
(WTR::TestRunner::shouldDumpWillCacheResponse):
(TestRunner):

LayoutTests:

Unskip http/tests/misc/willCacheResponse-delegate-callback.html
now that WebKitTestRunner implements dumpWillCacheResponse().

* platform/efl-wk2/TestExpectations:
* platform/wk2/Skipped:

Canonical link: https://commits.webkit.org/113713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127578 268f45cc-cd09-0410-ab3c-d52691b4dbfc